--- a/public/index.html
+++ b/public/index.html
@@ -24,13 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/public/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/public/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/public/favicon-16x16.png">
-    <link rel="manifest" href="%PUBLIC_URL%/public/manifest.json">
-    <link rel="mask-icon" href="%PUBLIC_URL%/public/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/public/favicon.ico">
-    <meta name="msapplication-config" content="%PUBLIC_URL%/public/browserconfig.xml">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <meta name="msapplication-config" content="%PUBLIC_URL%/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
